<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/orderPlaceButton"
        style="@style/myButtonThemeLeft"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginRight="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="40dp"
        android:text="@string/lbl_order_place"
        android:textSize="16sp" />
    
    <Button
        android:id="@+id/previousOrderButton"
        style="@style/myButtonThemeRight"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="40dp"
        android:text="@string/lbl_previous_order"
        android:textSize="16sp" />
    
    <Button
        android:id="@+id/onlineOrderButton"
        style="@style/myButtonThemeLeft"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginRight="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="40dp"
        android:text="@string/lbl_online_payment"
        android:textSize="16sp" />
    
    
    <Button
        android:id="@+id/accountStatementButton"
        style="@style/myButtonThemeRight"
        android:layout_width="match_parent"
        android:layout_height="45dp"
 		android:layout_marginLeft="100dp"
        android:layout_marginStart="100dp"        
        android:layout_marginBottom="5dp"
        android:layout_marginTop="40dp"
        android:text="@string/lbl_account_statement"
        android:textSize="16sp" />
    

</LinearLayout>