<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >
	<include
	        android:id="@+id/tool_bar"
	        layout="@layout/tool_bar">
	</include>
   <LinearLayout android:layout_width="match_parent"
       android:layout_height="0dp"
       android:orientation="vertical"
       android:gravity="center"
       android:layout_weight="1">
       <TextView android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="24sp"
           android:textStyle="bold"
           android:text="@string/welcomeback"/>
       <LinearLayout android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginLeft="40dp"
           android:layout_marginRight="40dp"
           android:layout_marginTop="20dp"
           android:padding="20dp"
           android:gravity="center_horizontal"
           android:background="@drawable/roundbackground"
           android:orientation="vertical">
   		 
   		 <EditText 
           android:id="@+id/userNameEditText"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textColor="@android:color/black"
           android:drawableLeft="@drawable/ic_user"
           android:drawableStart="@drawable/ic_user"
           android:drawablePadding="5dp"
           android:hint="@string/hint_usre"/>
       
         <EditText 
           android:id="@+id/passwordEditText"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:inputType="textPassword"
           android:layout_marginTop="5dp"
                      android:drawablePadding="5dp"
           
           android:drawableLeft="@drawable/ic_lock"
           android:drawableStart="@drawable/ic_lock"
           android:textColor="@android:color/black"
           android:hint="@string/hint_password"/>
               
           <Button 
               android:id="@+id/loginButton"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="20dp"
               android:layout_marginBottom="5dp"
               style="@style/myButtonTheme"
               android:text="@string/lbl_login"/>
         
       </LinearLayout>
       
   </LinearLayout>
</LinearLayout>
