<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar" >
    </include>

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.ei.slidingdrawer.HomeActivity" >

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="305dp"
            android:layout_height="match_parent"
            android:id="@+id/leftDrawerLayout"
            android:layout_gravity="start"
            android:background="@android:color/white"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="305dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:gravity="top"
                android:orientation="vertical"
                android:padding="16dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/milk_logo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:text="@string/lbl_samudratech"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:autoLink="email"
                    android:text="@string/value_email"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:autoLink="web"
                    android:text="@string/value_web"
                    android:textSize="12sp" />
            </LinearLayout>

            <View
                android:layout_width="305dp"
                android:layout_height="0.5dp"
                android:background="@android:color/darker_gray" />

            <ListView
                android:id="@android:id/list"
                android:layout_width="305dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@android:color/white" />
        </LinearLayout>
    </android.support.v4.widget.DrawerLayout>

</LinearLayout>